# daleiDB

./: .appveyor.yml  .codecov.yml  .doxyconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
doc/html/: graph_legend.html  index.html
src/: README.md  common.hpp  file_manager_exception.hpp  paged_file_manager.cpp  paged_file_manager.hpp
tests/: .clang_complete  Makefile  README.md
tests/src/: file_handle_tests.cpp  paged_file_manager_tests.cpp
